# LS

./: .gitignore  FINAL_CHECKLIST.md  FINAL_PROJECT_REPORT.md  GOLDEN_MASTER_CHECKLIST.md  PHASE4_ROADMAP_V5.md  README.md  RUST_INTEGRATION.md  UNIFIED_README.md  WEB4EXECUTIONPLAN_GENERATOR.md  WEB4MESHEXECUTIONPLANGENERATOR.md  WEB4NETWORKGRAPH_SPEC.md  WEB4PLATFORMEXECUTIONPLANGENERATOR.md  WEB4_BIOFOUNDATIONS.md  WEB4_MANIFEST.md  audio_module.py  audio_worker.py  build_all.py  build_rust.ps1  build_rust.sh  check_setup.py  config.py  demo.py  execution-plan.md  ghost_gui.py  ghost_gui_simple.py  gui_phase2.md  install_qwen.py  llm_module.py  main.py  main_app.py  mesh-execution-plan.md  platform-execution-plan.md  project_status.py  quick_config_test.py  quick_gui_test.py  quick_test.py  quick_test_golden_master.py  qwen_guide.md  qwen_handler.py  requirements.txt  (+13 more)
GhostGPT/: Modelfile  README.md  audio_diagnostic.py  audio_monitor.py  config.py  conscious_ghostgpt.py  conscious_logger.py  dashboard_test.py  gui_dashboard.py  health_check.py  integrated_system.py  interactive_test.py  language_test.py  logging_test.py  main.py  mic_test.py  preflight_check.py  requirements.txt  run_ghostgpt.bat  run_integrated.bat  self_love_agent.py  simple_dashboard_test.py  soul_integration_test.py  stereo_mix_setup.py  stereo_mix_test.py  strict_russian_test.py  system_test.py  test_access_protocol.py
codex/: __init__.py  cli.py
config/: base.yaml  console.yaml  ghostgpt.yaml  local.example.yaml  self_improving.yaml
data/: facts.json  logic.json
docs/: ADAPTIVE_COORDINATOR.md  ARCHITECTURE.md  ARCH_DIAGRAMS.md  ATTENTION_MODEL.md  BEHAVIORAL_NARRATIVES.md  BEHAVIORAL_STYLE_FORMATION.md  BEHAVIOR_CODEX.md  BRANCHING_MODEL.md  BUGS.md  (+67 more)
rust_core/: Cargo.toml
rust_core/ebpf/: kacl_sensor.bpf.c
rust_core/src/: lib.rs  memory_manager.rs  pattern_matcher.rs  storage.rs  transport.rs  web4_runtime.rs
(+407 files in other folders)
