[package]
name = "ghostgpt_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20" }
rayon = "1.8"
sled = "0.34"
bincode = "1.3"
lru = "0.12"
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
name = "ghostgpt_core"
crate-type = ["cdylib"]
