[package]
name = "ghostgpt_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["python"]
# Для Python extension (cdylib) — без линковки libpython
python = ["pyo3", "pyo3/extension-module"]
# Для тестов — с линковкой libpython
python-embed = ["pyo3", "pyo3/auto-initialize"]

[dependencies]
pyo3 = { version = "0.20", optional = true }
rayon = "1.8"
sled = "0.34"
bincode = "1.3"
lru = "0.12"
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]

[lib]
name = "ghostgpt_core"
crate-type = ["cdylib", "rlib"]
